assets/sass/main.scss
:root {
  --background: #444444;
  --font: white;
  --secondary: #aaa;
  
}

@media (prefers-color-scheme: light) {
  :root {
    --background: white;
    --font: #444444;
    --secondary: #949494;
  }
}

body {
  background-color: white;
  background-color: var(--background);
  color: #444444;
  color: var(--font);

  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
}

.content {
  margin: auto;
  max-width: 480px;
  padding: 20px;
}

a {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: #949494;
  text-decoration-color: var(--secondary);
  text-underline-offset: 0.15em;
  text-underline-position: below;

  &:hover {
    background-color: #949494;
    background-color: var(--secondary);
    text-decoration: none;
  }
}

article {  
  img {
    max-width: 240px;
  }

  p, li {
    font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  }
}

blockquote {
  border-left: 0.125em solid violet;
  margin-left: 30px;
  padding: 10px;
  padding-left: 15px;

  a {
    color: inherit;
    text-decoration: none;
  }
}

#dated-li {
  padding-bottom: 15px;
}

footer {
  color: #949494;
  color: var(--secondary);
  text-align: justify;

  a {
    text-decoration: underline;
  }
}

h1 {
  color: violet;
}

.info {
  color: #949494;
  color: var(--secondary);
  font-style: italic;

  a {
    text-decoration-color: #444444;
    text-decoration-color: var(--font);

    &:hover {
      color: #444444;
      background-color: var(--font);
    }
  }
}

#landing-main {
  padding-top: 20px;
  padding-bottom: 20px;
}

li {
  line-height: 1.5;
}

nav {
  a {
    text-decoration-color: violet;

    &:hover {
      background-color: violet;
    }
  }

  li {
    line-height: 1.75;
  }

  ul {
    list-style-type: none;
    padding: 0;
  }
}

p {
  line-height: 1.5;
}

#recent-info {
  span {
    display: inline-block;
  }
}

#site-footer {
  padding-left: 40px;
  padding-top: 20px;
}

#taxonomy {
  padding-top: 15px;
}

#title {
  font-family: Georgia, serif;
  white-space: nowrap;

  a {
    text-decoration: none;
    &:hover {
      background-color: inherit;
    }
  }

  h1 {
    display: inline;
  }

  span {
    margin-right: 20px;
  }
}

#thanks h2 {
  color: violet;
  font-family: Georgia, serif;
  font-style: italic;
}

html {
  #title {
    user-select: none;
  }
}

#writing-list {
  list-style-type: none;
  padding: 0;

  li {
    padding-bottom: 15px;
  }
}

